More stuff. Im not good at doign one thing at a time
