# backend/docs/swagger.yaml
@@ -92,6 +92,27 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /playlist:
+    get:
+      description: Responds with the list of all playlists as JSON.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Playlist'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get all playlists
+      tags:
+      - playlists
   /playlist/create:
     post:
       consumes:
